--- a/index.css
+++ b/index.css
@@ -19,13 +19,21 @@ body {
 #inputBox {
 	position: absolute;
 	bottom: 1%;
-	width: 98%;
-	height: 5%
+	width: 100%;
+	height: 5%;
 }
 
 #userInput {
-	width: 100%;
-	height: 100%; 
+	position: absolute;
+	bottom: 1%;
+	width: 98%;
 	text-align: center;
 	font-size: 30px;
+	background-color: black;
+	color: white;
+	border: none;
+}
+
+input:focus {
+	outline: none;
 }
