--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html {
+	overflow-x: hidden;
+}
+
 body {
 	background-color: black;
 }
@@ -14,13 +18,6 @@ body {
 #titleLogo {
 	width: 1000px;
     height: 200px;
-}
-
-#inputBox {
-	position: absolute;
-	bottom: 1%;
-	width: 100%;
-	height: 5%;
 }
 
 #userInput {
