--- a/riverCrossing.css
+++ b/riverCrossing.css
@@ -1,3 +1,51 @@
 body {
 	background-color: black;
 }
+
+#name
+{
+  font-size: 30px;
+  color: white;
+  left: 50%;
+  -webkit-transform: translate(-50%,0%);
+  position: absolute;
+  top: 3%;
+}
+#date
+{
+  font-size: 30px;
+  color: white;
+  left: 50%;
+  -webkit-transform: translate(-50%,0%);
+  position: absolute;
+  top: 8%;
+}
+
+#decal
+{
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%,0%);
+  height: 70%;
+  bottom: 10%;
+}
+
+#text
+{
+  position: absolute;
+  font-size: 30px;
+  color: white;
+  top: 35%;
+  left: 50%;
+  -webkit-transform: translate(-50%,0%);
+}
+
+#userDirections
+{
+  position: absolute;
+  bottom: 5%;
+  color: white;
+  left: 50%;
+  -webkit-transform: translate(-50%,0%);
+  font-size: 30px;
+}
