--- a/traveling.css
+++ b/traveling.css
@@ -3,7 +3,7 @@ body {
 }
 
 #wrapper {
-	height: 100vh;
+	height: 90vh;
 }
 
 #traveling {
@@ -34,7 +34,7 @@ body {
 {
 	position: absolute;
 	left: -12%;
-	top: 115px;
+	top: 110px;
 }
 
 #notification
@@ -46,6 +46,7 @@ body {
 	position: absolute;
 	top: 18%;
 	left: 48%;
-	font-size: 40px
+	font-size: 40px;
+	max-width: 100%;
 
 }
