--- a/paceChange.css
+++ b/paceChange.css
@@ -35,26 +35,17 @@ body {
 	width: 100%;
 }
 
-#userDirections {
+#userInput {
 	font-size: 30px;
 	color: white;
+	background-color: black;
 	text-align: center;
 	position: absolute;
 	top: 70%;
 	right: 50%;
+	border: 0;
 }
 
 input:focus {
 	outline: none;
-}
-
-#userInput {
-	position: absolute;
-	bottom: 1%;
-	width: 98%;
-	text-align: center;
-	font-size: 30px;
-	background-color: black;
-	color: white;
-	border: none;
 }
