--- a/landmark.css
+++ b/landmark.css
@@ -42,3 +42,14 @@ body {
 	position:absolute;
 	bottom: 2%;
 }
+
+#score {
+	font-size: 25px;
+	color: white;
+	left: 50%;
+	-webkit-transform: translate(-50%,0%);
+	text-align: center;
+	position:absolute;
+	bottom: 10%;
+
+}
